WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46716
Full-page Adobe Reader does not paint until window is resized
https://bugs.webkit.org/show_bug.cgi?id=46716
Summary
Full-page Adobe Reader does not paint until window is resized
Adam Roben (:aroben)
Reported
2010-09-28 04:30:53 PDT
To reproduce: 1. Go to
http://www.longwood.edu/helpdesk/blackboard/Bbfiletypes/pdffiles.pdf
2. Resize the window Adobe Reader doesn't paint until step 2. <
rdar://problem/8482014
>
Attachments
Don't call NPP_SetWindow until the plugin's HWND has been sized/positioned
(12.97 KB, patch)
2010-09-28 04:38 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-09-28 04:38:02 PDT
Created
attachment 69038
[details]
Don't call NPP_SetWindow until the plugin's HWND has been sized/positioned
WebKit Review Bot
Comment 2
2010-09-28 04:43:08 PDT
Attachment 69038
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp:63: PluginTest::NPP_SetWindow is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/win/WindowGeometryInitializedBeforeSetWindow.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/win/WindowGeometryInitializedBeforeSetWindow.cpp:28: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 3
2010-09-28 08:45:13 PDT
Committed
r68520
: <
http://trac.webkit.org/changeset/68520
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug