Don't call NPP_SetWindow until the plugin's HWND has been sized/positioned

Test: platform/win/plugins/window-geometry-initialized-before-set-window.html

Reviewed by Anders Carlsson.

Fixes <http://webkit.org/b/46716> <rdar://problem/8482014> Full-page
Adobe Reader does not paint until window is resized

WebKit2:

* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::geometryDidChange): Call NPP_SetWindow after
updating the platform (HWND) geometry.

WebKitTools:

Test that a plugin's HWND is sized/positioned before NPP_SetWindow is called

Reviewed by Anders Carlsson.

* DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp:
(PluginTest::NPP_SetWindow): Added. Just returns NPERR_NO_ERROR at
this level.

* DumpRenderTree/TestNetscapePlugIn/PluginTest.h: Declared
NPP_SetWindow.

* DumpRenderTree/TestNetscapePlugIn/Tests/win/WindowGeometryInitializedBeforeSetWindow.cpp: Added.
(WindowGeometryInitializedBeforeSetWindow::NPP_SetWindow): Checks that
the plugin's HWND has a non-zero size and that its size/position
matches that specified in the NPWindow.

* DumpRenderTree/TestNetscapePlugIn/main.cpp:
(NPP_SetWindow): Call through to the PluginTest.

* DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
Added WindowGeometryInitializedBeforeSetWindow.cpp, and let VS reorder
the files as it saw fit.

LayoutTests:

Test that a plugin's HWND is sized/positioned before NPP_SetWindow is called

* platform/win/plugins/window-geometry-initialized-before-set-window-expected.txt: Added.
* platform/win/plugins/window-geometry-initialized-before-set-window.html: Added.

Canonical link: https://commits.webkit.org/59207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68520 268f45cc-cd09-0410-ab3c-d52691b4dbfc