WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.cpp
@@ -397,8 +397,8 @@ void NetscapePlugin::geometryDidChange(const IntRect& frameRect, const IntRect& 
     m_frameRect = frameRect;
     m_clipRect = clipRect;
 
-    callSetWindow();
     platformGeometryDidChange();
+    callSetWindow();
 }
 
 void NetscapePlugin::frameDidFinishLoading(uint64_t requestID)
