WebKitTools/DumpRenderTree/TestNetscapePlugIn/main.cpp
@@ -300,7 +300,7 @@ NPError NPP_SetWindow(NPP instance, NPWindow *window)
         }
     }
     
-    return NPERR_NO_ERROR;
+    return obj->pluginTest->NPP_SetWindow(instance, window);
 }
 
 static void executeScript(const PluginObject* obj, const char* script)
